api: update UIResource waiting schema
